New Email verification Feature, send emails and verify code but test not written yet